# sigmoid_brrr

./: .gitignore  Dockerfile  LICENSE  readme.md
.github/workflows/: build_verilator.yml
notebooks/: rtl_testbench.py  sigmoid.ipynb  sigmoid_tuning_nn.ipynb  sigmoid_tuning_nn_polynomial.ipynb
notebooks/testbench_results/: rtl_testbench_inputs.txt  rtl_testbench_outputs.txt
sigmoid_rtl/src/bd/: design_zybo.tcl
sigmoid_rtl/src/constraints/: constraints.xdc
sigmoid_rtl/src/cpp_testbench/: .clang-format  CMakeLists.txt
sigmoid_rtl/src/cpp_testbench/include/: bf16.hpp  helpers.hpp  sigmoid.hpp  ui.hpp
sigmoid_rtl/src/cpp_testbench/src/: testbench.cpp  ui.cpp
sigmoid_rtl/src/rtl/: axis_sigmoid.sv  bf16_abs.sv  bf16_cmp.sv  bf16_constants.sv  bf16_units.sv  polynomial_2nd_degree.sv  sigmoid.sv  sigmoid_pipelined.sv  silu_pipelined.sv  single_cycle_fpu.sv
sigmoid_rtl/src/rtl/bf16/: lampFPU_addsub_comb.sv  lampFPU_cmp_comb.sv  lampFPU_div_comb.sv  lampFPU_f2i_comb.sv  lampFPU_fractDiv_comb.sv  lampFPU_i2f_comb.sv  lampFPU_mul_comb.sv  lampFPU_pkg.sv
sigmoid_rtl/src/sdk/: example_simple_poll.c
sigmoid_rtl/src/simulation/: sample_test_cases.txt  test_fpu.sv  test_pipelined_outputs.sv  test_sigmoid.sv  test_sigmoid_pipelined.sv  test_silu.sv
